// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorizeForm should render LoggedInForm when logged in 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <JetpackConnectMainWrapper
    isWide={false}
  >
    <div
      className="jetpack-connect__authorize-form"
    >
      <Localized(LoggedInForm)
        authAttempts={0}
        calypsoStartedConnection={false}
        isAlreadyOnSitesList={false}
        isFetchingAuthorizationSite={false}
        isFetchingSites={false}
        isSSO={false}
        isWoo={false}
        jetpackConnectAuthorize={
          Object {
            "authorizeError": false,
            "authorizeSuccess": false,
            "clientNotResponding": true,
            "isAuthorizing": false,
            "queryObject": Object {
              "_ui": 1239876546,
              "_ut": "wpcom:user_id",
              "_wp_nonce": "fooBarNonce",
              "blogname": "Example Blog",
              "calypso_env": "production",
              "client_id": "98765",
              "from": "banner-44-slide-1-dashboard",
              "home_url": "http://an.example.site",
              "jp_version": "5.4",
              "locale": "en",
              "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
              "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
              "scope": "administrator:fooBarBaz",
              "secret": "fooBarSecret",
              "site": "http://an.example.site",
              "site_icon": "",
              "site_lang": "en_US",
              "site_url": "http://an.example.site",
              "state": "2",
              "user_email": "email@an.example.site",
              "user_login": "theUserLogin",
            },
            "timestamp": 1509368045859,
            "userAlreadyConnected": false,
          }
        }
        path="/jetpack/connect/authorize"
        recordTracksEvent={[Function]}
        siteSlug="an.example.site"
        user={
          Object {
            "ID": 1239876546,
            "display_name": "An Example User's Name",
            "username": "exampleusername",
          }
        }
      />
    </div>
  </JetpackConnectMainWrapper>,
  "nodes": Array [
    <JetpackConnectMainWrapper
      isWide={false}
    >
      <div
        className="jetpack-connect__authorize-form"
      >
        <Localized(LoggedInForm)
          authAttempts={0}
          calypsoStartedConnection={false}
          isAlreadyOnSitesList={false}
          isFetchingAuthorizationSite={false}
          isFetchingSites={false}
          isSSO={false}
          isWoo={false}
          jetpackConnectAuthorize={
            Object {
              "authorizeError": false,
              "authorizeSuccess": false,
              "clientNotResponding": true,
              "isAuthorizing": false,
              "queryObject": Object {
                "_ui": 1239876546,
                "_ut": "wpcom:user_id",
                "_wp_nonce": "fooBarNonce",
                "blogname": "Example Blog",
                "calypso_env": "production",
                "client_id": "98765",
                "from": "banner-44-slide-1-dashboard",
                "home_url": "http://an.example.site",
                "jp_version": "5.4",
                "locale": "en",
                "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
                "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
                "scope": "administrator:fooBarBaz",
                "secret": "fooBarSecret",
                "site": "http://an.example.site",
                "site_icon": "",
                "site_lang": "en_US",
                "site_url": "http://an.example.site",
                "state": "2",
                "user_email": "email@an.example.site",
                "user_login": "theUserLogin",
              },
              "timestamp": 1509368045859,
              "userAlreadyConnected": false,
            }
          }
          path="/jetpack/connect/authorize"
          recordTracksEvent={[Function]}
          siteSlug="an.example.site"
          user={
            Object {
              "ID": 1239876546,
              "display_name": "An Example User's Name",
              "username": "exampleusername",
            }
          }
        />
      </div>
    </JetpackConnectMainWrapper>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <JetpackConnectAuthorizeForm
        authAttempts={0}
        calypsoStartedConnection={false}
        isAlreadyOnSitesList={false}
        isFetchingAuthorizationSite={false}
        isFetchingSites={false}
        jetpackConnectAuthorize={
          Object {
            "authorizeError": false,
            "authorizeSuccess": false,
            "clientNotResponding": true,
            "isAuthorizing": false,
            "queryObject": Object {
              "_ui": 1239876546,
              "_ut": "wpcom:user_id",
              "_wp_nonce": "fooBarNonce",
              "blogname": "Example Blog",
              "calypso_env": "production",
              "client_id": "98765",
              "from": "banner-44-slide-1-dashboard",
              "home_url": "http://an.example.site",
              "jp_version": "5.4",
              "locale": "en",
              "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
              "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
              "scope": "administrator:fooBarBaz",
              "secret": "fooBarSecret",
              "site": "http://an.example.site",
              "site_icon": "",
              "site_lang": "en_US",
              "site_url": "http://an.example.site",
              "state": "2",
              "user_email": "email@an.example.site",
              "user_login": "theUserLogin",
            },
            "timestamp": 1509368045859,
            "userAlreadyConnected": false,
          }
        }
        path="/jetpack/connect/authorize"
        recordTracksEvent={[Function]}
        siteSlug="an.example.site"
        user={
          Object {
            "ID": 1239876546,
            "display_name": "An Example User's Name",
            "username": "exampleusername",
          }
        }
      />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": JetpackConnectAuthorizeForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleClickHelp": [Function],
        "props": Object {
          "authAttempts": 0,
          "calypsoStartedConnection": false,
          "isAlreadyOnSitesList": false,
          "isFetchingAuthorizationSite": false,
          "isFetchingSites": false,
          "jetpackConnectAuthorize": Object {
            "authorizeError": false,
            "authorizeSuccess": false,
            "clientNotResponding": true,
            "isAuthorizing": false,
            "queryObject": Object {
              "_ui": 1239876546,
              "_ut": "wpcom:user_id",
              "_wp_nonce": "fooBarNonce",
              "blogname": "Example Blog",
              "calypso_env": "production",
              "client_id": "98765",
              "from": "banner-44-slide-1-dashboard",
              "home_url": "http://an.example.site",
              "jp_version": "5.4",
              "locale": "en",
              "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
              "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
              "scope": "administrator:fooBarBaz",
              "secret": "fooBarSecret",
              "site": "http://an.example.site",
              "site_icon": "",
              "site_lang": "en_US",
              "site_url": "http://an.example.site",
              "state": "2",
              "user_email": "email@an.example.site",
              "user_login": "theUserLogin",
            },
            "timestamp": 1509368045859,
            "userAlreadyConnected": false,
          },
          "path": "/jetpack/connect/authorize",
          "recordTracksEvent": [Function],
          "siteSlug": "an.example.site",
          "user": Object {
            "ID": 1239876546,
            "display_name": "An Example User's Name",
            "username": "exampleusername",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <JetpackConnectMainWrapper
          isWide={false}
        >
          <div
            className="jetpack-connect__authorize-form"
          >
            <Localized(LoggedInForm)
              authAttempts={0}
              calypsoStartedConnection={false}
              isAlreadyOnSitesList={false}
              isFetchingAuthorizationSite={false}
              isFetchingSites={false}
              isSSO={false}
              isWoo={false}
              jetpackConnectAuthorize={
                Object {
                  "authorizeError": false,
                  "authorizeSuccess": false,
                  "clientNotResponding": true,
                  "isAuthorizing": false,
                  "queryObject": Object {
                    "_ui": 1239876546,
                    "_ut": "wpcom:user_id",
                    "_wp_nonce": "fooBarNonce",
                    "blogname": "Example Blog",
                    "calypso_env": "production",
                    "client_id": "98765",
                    "from": "banner-44-slide-1-dashboard",
                    "home_url": "http://an.example.site",
                    "jp_version": "5.4",
                    "locale": "en",
                    "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
                    "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
                    "scope": "administrator:fooBarBaz",
                    "secret": "fooBarSecret",
                    "site": "http://an.example.site",
                    "site_icon": "",
                    "site_lang": "en_US",
                    "site_url": "http://an.example.site",
                    "state": "2",
                    "user_email": "email@an.example.site",
                    "user_login": "theUserLogin",
                  },
                  "timestamp": 1509368045859,
                  "userAlreadyConnected": false,
                }
              }
              path="/jetpack/connect/authorize"
              recordTracksEvent={[Function]}
              siteSlug="an.example.site"
              user={
                Object {
                  "ID": 1239876546,
                  "display_name": "An Example User's Name",
                  "username": "exampleusername",
                }
              }
            />
          </div>
        </JetpackConnectMainWrapper>,
        "_debugID": 4,
        "_renderedOutput": <JetpackConnectMainWrapper
          isWide={false}
        >
          <div
            className="jetpack-connect__authorize-form"
          >
            <Localized(LoggedInForm)
              authAttempts={0}
              calypsoStartedConnection={false}
              isAlreadyOnSitesList={false}
              isFetchingAuthorizationSite={false}
              isFetchingSites={false}
              isSSO={false}
              isWoo={false}
              jetpackConnectAuthorize={
                Object {
                  "authorizeError": false,
                  "authorizeSuccess": false,
                  "clientNotResponding": true,
                  "isAuthorizing": false,
                  "queryObject": Object {
                    "_ui": 1239876546,
                    "_ut": "wpcom:user_id",
                    "_wp_nonce": "fooBarNonce",
                    "blogname": "Example Blog",
                    "calypso_env": "production",
                    "client_id": "98765",
                    "from": "banner-44-slide-1-dashboard",
                    "home_url": "http://an.example.site",
                    "jp_version": "5.4",
                    "locale": "en",
                    "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
                    "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
                    "scope": "administrator:fooBarBaz",
                    "secret": "fooBarSecret",
                    "site": "http://an.example.site",
                    "site_icon": "",
                    "site_lang": "en_US",
                    "site_url": "http://an.example.site",
                    "state": "2",
                    "user_email": "email@an.example.site",
                    "user_login": "theUserLogin",
                  },
                  "timestamp": 1509368045859,
                  "userAlreadyConnected": false,
                }
              }
              path="/jetpack/connect/authorize"
              recordTracksEvent={[Function]}
              siteSlug="an.example.site"
              user={
                Object {
                  "ID": 1239876546,
                  "display_name": "An Example User's Name",
                  "username": "exampleusername",
                }
              }
            />
          </div>
        </JetpackConnectMainWrapper>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <JetpackConnectAuthorizeForm
    authAttempts={0}
    calypsoStartedConnection={false}
    isAlreadyOnSitesList={false}
    isFetchingAuthorizationSite={false}
    isFetchingSites={false}
    jetpackConnectAuthorize={
      Object {
        "authorizeError": false,
        "authorizeSuccess": false,
        "clientNotResponding": true,
        "isAuthorizing": false,
        "queryObject": Object {
          "_ui": 1239876546,
          "_ut": "wpcom:user_id",
          "_wp_nonce": "fooBarNonce",
          "blogname": "Example Blog",
          "calypso_env": "production",
          "client_id": "98765",
          "from": "banner-44-slide-1-dashboard",
          "home_url": "http://an.example.site",
          "jp_version": "5.4",
          "locale": "en",
          "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
          "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
          "scope": "administrator:fooBarBaz",
          "secret": "fooBarSecret",
          "site": "http://an.example.site",
          "site_icon": "",
          "site_lang": "en_US",
          "site_url": "http://an.example.site",
          "state": "2",
          "user_email": "email@an.example.site",
          "user_login": "theUserLogin",
        },
        "timestamp": 1509368045859,
        "userAlreadyConnected": false,
      }
    }
    path="/jetpack/connect/authorize"
    recordTracksEvent={[Function]}
    siteSlug="an.example.site"
    user={
      Object {
        "ID": 1239876546,
        "display_name": "An Example User's Name",
        "username": "exampleusername",
      }
    }
  />,
}
`;

exports[`AuthorizeForm should render LoggedOutForm when logged out 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <JetpackConnectMainWrapper
    isWide={false}
  >
    <div
      className="jetpack-connect__authorize-form"
    >
      <Localized(LoggedOutForm)
        authAttempts={0}
        calypsoStartedConnection={false}
        isAlreadyOnSitesList={false}
        isFetchingAuthorizationSite={false}
        isFetchingSites={false}
        isSSO={false}
        isWoo={false}
        jetpackConnectAuthorize={
          Object {
            "authorizeError": false,
            "authorizeSuccess": false,
            "clientNotResponding": true,
            "isAuthorizing": false,
            "queryObject": Object {
              "_ui": "jetpack:fooBarBaz",
              "_ut": "anon",
              "_wp_nonce": "fooBarNonce",
              "blogname": "Example Blog",
              "calypso_env": "production",
              "client_id": "98765",
              "from": "banner-44-slide-1-dashboard",
              "home_url": "http://an.example.site",
              "jp_version": "5.4",
              "locale": "en",
              "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
              "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
              "scope": "administrator:fooBarBaz",
              "secret": "fooBarSecret",
              "site": "http://an.example.site",
              "site_icon": "",
              "site_lang": "en_US",
              "site_url": "http://an.example.site",
              "state": "2",
              "user_email": "email@an.example.site",
              "user_login": "theUserLogin",
            },
            "timestamp": 1509368045859,
            "userAlreadyConnected": false,
          }
        }
        path="/jetpack/connect/authorize"
        recordTracksEvent={[Function]}
        setTracksAnonymousUserId={[Function]}
        siteSlug="an.example.site"
        user={null}
      />
    </div>
  </JetpackConnectMainWrapper>,
  "nodes": Array [
    <JetpackConnectMainWrapper
      isWide={false}
    >
      <div
        className="jetpack-connect__authorize-form"
      >
        <Localized(LoggedOutForm)
          authAttempts={0}
          calypsoStartedConnection={false}
          isAlreadyOnSitesList={false}
          isFetchingAuthorizationSite={false}
          isFetchingSites={false}
          isSSO={false}
          isWoo={false}
          jetpackConnectAuthorize={
            Object {
              "authorizeError": false,
              "authorizeSuccess": false,
              "clientNotResponding": true,
              "isAuthorizing": false,
              "queryObject": Object {
                "_ui": "jetpack:fooBarBaz",
                "_ut": "anon",
                "_wp_nonce": "fooBarNonce",
                "blogname": "Example Blog",
                "calypso_env": "production",
                "client_id": "98765",
                "from": "banner-44-slide-1-dashboard",
                "home_url": "http://an.example.site",
                "jp_version": "5.4",
                "locale": "en",
                "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
                "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
                "scope": "administrator:fooBarBaz",
                "secret": "fooBarSecret",
                "site": "http://an.example.site",
                "site_icon": "",
                "site_lang": "en_US",
                "site_url": "http://an.example.site",
                "state": "2",
                "user_email": "email@an.example.site",
                "user_login": "theUserLogin",
              },
              "timestamp": 1509368045859,
              "userAlreadyConnected": false,
            }
          }
          path="/jetpack/connect/authorize"
          recordTracksEvent={[Function]}
          setTracksAnonymousUserId={[Function]}
          siteSlug="an.example.site"
          user={null}
        />
      </div>
    </JetpackConnectMainWrapper>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <JetpackConnectAuthorizeForm
        authAttempts={0}
        calypsoStartedConnection={false}
        isAlreadyOnSitesList={false}
        isFetchingAuthorizationSite={false}
        isFetchingSites={false}
        jetpackConnectAuthorize={
          Object {
            "authorizeError": false,
            "authorizeSuccess": false,
            "clientNotResponding": true,
            "isAuthorizing": false,
            "queryObject": Object {
              "_ui": "jetpack:fooBarBaz",
              "_ut": "anon",
              "_wp_nonce": "fooBarNonce",
              "blogname": "Example Blog",
              "calypso_env": "production",
              "client_id": "98765",
              "from": "banner-44-slide-1-dashboard",
              "home_url": "http://an.example.site",
              "jp_version": "5.4",
              "locale": "en",
              "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
              "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
              "scope": "administrator:fooBarBaz",
              "secret": "fooBarSecret",
              "site": "http://an.example.site",
              "site_icon": "",
              "site_lang": "en_US",
              "site_url": "http://an.example.site",
              "state": "2",
              "user_email": "email@an.example.site",
              "user_login": "theUserLogin",
            },
            "timestamp": 1509368045859,
            "userAlreadyConnected": false,
          }
        }
        path="/jetpack/connect/authorize"
        recordTracksEvent={[Function]}
        setTracksAnonymousUserId={[Function]}
        siteSlug="an.example.site"
        user={null}
      />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": JetpackConnectAuthorizeForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleClickHelp": [Function],
        "props": Object {
          "authAttempts": 0,
          "calypsoStartedConnection": false,
          "isAlreadyOnSitesList": false,
          "isFetchingAuthorizationSite": false,
          "isFetchingSites": false,
          "jetpackConnectAuthorize": Object {
            "authorizeError": false,
            "authorizeSuccess": false,
            "clientNotResponding": true,
            "isAuthorizing": false,
            "queryObject": Object {
              "_ui": "jetpack:fooBarBaz",
              "_ut": "anon",
              "_wp_nonce": "fooBarNonce",
              "blogname": "Example Blog",
              "calypso_env": "production",
              "client_id": "98765",
              "from": "banner-44-slide-1-dashboard",
              "home_url": "http://an.example.site",
              "jp_version": "5.4",
              "locale": "en",
              "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
              "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
              "scope": "administrator:fooBarBaz",
              "secret": "fooBarSecret",
              "site": "http://an.example.site",
              "site_icon": "",
              "site_lang": "en_US",
              "site_url": "http://an.example.site",
              "state": "2",
              "user_email": "email@an.example.site",
              "user_login": "theUserLogin",
            },
            "timestamp": 1509368045859,
            "userAlreadyConnected": false,
          },
          "path": "/jetpack/connect/authorize",
          "recordTracksEvent": [Function],
          "setTracksAnonymousUserId": [Function],
          "siteSlug": "an.example.site",
          "user": null,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <JetpackConnectMainWrapper
          isWide={false}
        >
          <div
            className="jetpack-connect__authorize-form"
          >
            <Localized(LoggedOutForm)
              authAttempts={0}
              calypsoStartedConnection={false}
              isAlreadyOnSitesList={false}
              isFetchingAuthorizationSite={false}
              isFetchingSites={false}
              isSSO={false}
              isWoo={false}
              jetpackConnectAuthorize={
                Object {
                  "authorizeError": false,
                  "authorizeSuccess": false,
                  "clientNotResponding": true,
                  "isAuthorizing": false,
                  "queryObject": Object {
                    "_ui": "jetpack:fooBarBaz",
                    "_ut": "anon",
                    "_wp_nonce": "fooBarNonce",
                    "blogname": "Example Blog",
                    "calypso_env": "production",
                    "client_id": "98765",
                    "from": "banner-44-slide-1-dashboard",
                    "home_url": "http://an.example.site",
                    "jp_version": "5.4",
                    "locale": "en",
                    "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
                    "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
                    "scope": "administrator:fooBarBaz",
                    "secret": "fooBarSecret",
                    "site": "http://an.example.site",
                    "site_icon": "",
                    "site_lang": "en_US",
                    "site_url": "http://an.example.site",
                    "state": "2",
                    "user_email": "email@an.example.site",
                    "user_login": "theUserLogin",
                  },
                  "timestamp": 1509368045859,
                  "userAlreadyConnected": false,
                }
              }
              path="/jetpack/connect/authorize"
              recordTracksEvent={[Function]}
              setTracksAnonymousUserId={[Function]}
              siteSlug="an.example.site"
              user={null}
            />
          </div>
        </JetpackConnectMainWrapper>,
        "_debugID": 2,
        "_renderedOutput": <JetpackConnectMainWrapper
          isWide={false}
        >
          <div
            className="jetpack-connect__authorize-form"
          >
            <Localized(LoggedOutForm)
              authAttempts={0}
              calypsoStartedConnection={false}
              isAlreadyOnSitesList={false}
              isFetchingAuthorizationSite={false}
              isFetchingSites={false}
              isSSO={false}
              isWoo={false}
              jetpackConnectAuthorize={
                Object {
                  "authorizeError": false,
                  "authorizeSuccess": false,
                  "clientNotResponding": true,
                  "isAuthorizing": false,
                  "queryObject": Object {
                    "_ui": "jetpack:fooBarBaz",
                    "_ut": "anon",
                    "_wp_nonce": "fooBarNonce",
                    "blogname": "Example Blog",
                    "calypso_env": "production",
                    "client_id": "98765",
                    "from": "banner-44-slide-1-dashboard",
                    "home_url": "http://an.example.site",
                    "jp_version": "5.4",
                    "locale": "en",
                    "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
                    "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
                    "scope": "administrator:fooBarBaz",
                    "secret": "fooBarSecret",
                    "site": "http://an.example.site",
                    "site_icon": "",
                    "site_lang": "en_US",
                    "site_url": "http://an.example.site",
                    "state": "2",
                    "user_email": "email@an.example.site",
                    "user_login": "theUserLogin",
                  },
                  "timestamp": 1509368045859,
                  "userAlreadyConnected": false,
                }
              }
              path="/jetpack/connect/authorize"
              recordTracksEvent={[Function]}
              setTracksAnonymousUserId={[Function]}
              siteSlug="an.example.site"
              user={null}
            />
          </div>
        </JetpackConnectMainWrapper>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <JetpackConnectAuthorizeForm
    authAttempts={0}
    calypsoStartedConnection={false}
    isAlreadyOnSitesList={false}
    isFetchingAuthorizationSite={false}
    isFetchingSites={false}
    jetpackConnectAuthorize={
      Object {
        "authorizeError": false,
        "authorizeSuccess": false,
        "clientNotResponding": true,
        "isAuthorizing": false,
        "queryObject": Object {
          "_ui": "jetpack:fooBarBaz",
          "_ut": "anon",
          "_wp_nonce": "fooBarNonce",
          "blogname": "Example Blog",
          "calypso_env": "production",
          "client_id": "98765",
          "from": "banner-44-slide-1-dashboard",
          "home_url": "http://an.example.site",
          "jp_version": "5.4",
          "locale": "en",
          "redirect_after_auth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
          "redirect_uri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
          "scope": "administrator:fooBarBaz",
          "secret": "fooBarSecret",
          "site": "http://an.example.site",
          "site_icon": "",
          "site_lang": "en_US",
          "site_url": "http://an.example.site",
          "state": "2",
          "user_email": "email@an.example.site",
          "user_login": "theUserLogin",
        },
        "timestamp": 1509368045859,
        "userAlreadyConnected": false,
      }
    }
    path="/jetpack/connect/authorize"
    recordTracksEvent={[Function]}
    setTracksAnonymousUserId={[Function]}
    siteSlug="an.example.site"
    user={null}
  />,
}
`;
